<resources>
    <string name="app_name">Tweet{me}</string>  

    <string name="rooftop_app_id"></string>
    <string name="rooftop_client_key"></string>
    <string name="rooftop_identity_pool_id"></string>
    <string name="facebook_app_id"></string>
    <string name="gcm_sender_id">id:</string>

    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_create_post">Create Post</string>
    <string name="application_face_picture">Application Face Picture</string>
    <string name="tweet">Tweet</string>
    <string name="me">{me}</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="i_don_t_have_an_account">I Don\'t have an account</string>
    <string name="def_user_name">user_name</string>
    <string name="def_message_body">Hello World! It might be something longer, and longer, and
        longer, and longer
    </string>
    <string name="def_time">12:58 PM</string>
</resources>
